visibility fixes

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -168,7 +168,6 @@ main {
 .companylogo {
   position: relative;
   border-radius: .8rem;
-  width: 5rem;
   border: 1px solid rgba(0,0,0,.125);
 }
 
